apps/base/pickleball-predictor/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pickleball-predictor-auth
  namespace: pickleball-predictor
spec:
  basicAuth:
    secret: pickleball-predictor-webui-auth
