apps/base/pickleball-predictor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pickleball-predictor
  namespace: pickleball-predictor
spec:
  selector:
    app: pickleball-predictor
  ports:
    - port: 80
      targetPort: 8080
